2009-01-20  higepon  <higepon@users.sourceforge.jp>

        * FFIProcedures.cpp : Disabled ffi procedure when not IA32.

        * configure.ac: Added architecture check.

        * Bignum.h : Added code for 64bit.

        * scheme.h: Fixed the size bug of ucs4char. It causes crash on Linux 64bit.

2009-01-19  kokosabu <kokosabu@gmail.com>

        * Changed: file buffer size.

2009-01-18  higepon  <higepon@users.sourceforge.jp>

        * lib/mysql.ss : Added mysql library. It's not enough yet.

        * lib/mosh/ffi.ss (stub-ht): Added mapping (char* . ,%ffi-call->string-or-zero).

        * Added %ffi-call->string-or-zero.

2008-01-18  kokosabu  <kokosabu@gmail.como>

        * FileBinaryOutputPort.cpp: Implemented block mode.

2009-01-17  higepon  <higepon@users.sourceforge.jp>

        * test/ffi.scm (libmysqlclient): check the return value of mysql-real-connect.

2009-01-17  kokosabu  <kokosabu@gmail.com>

        * FileBinaryInputPort.cpp: Added buffer mode.

2009-01-15  higepon  <higepon@users.sourceforge.jp>

        * ObjectTest.cpp: Added for testing "Base system" of Mosh.

        * Makefile.am (test): Renamed some tests.
          (nobase_data_DATA): Added pp.ss to installed files.

        * test/ffi.scm : Added tests for FFI API.

        * lib/mosh/test.ss : Fixed a buf when NG.

        * lib/mosh/ffi.ss : Added.

        * test-data.scm (let*): Added test for %ffi-pointer-ref and %ffi-pointer->string.

2009-01-14  higepon  <higepon@users.sourceforge.jp>

        * Bignum.h (scheme): Fixed conversion things.

2009-01-13  higepon  <higepon@users.sourceforge.jp>

        * FFIProcedures.cpp: Use intptr_t instead of uint64_t.

        * Bignum.h (scheme): Added for compatibility.

        * configure.ac : On OSX don't use -shared option use -dynamiclib option instread.

2009-01-12  higepon  <higepon@users.sourceforge.jp>

        * Added %ffi-call->void.

        * FFITest.cpp (TEST_F): Added test for FFI ByteVector.
