@@ -36,6 +36,7 @@
 
 namespace scheme {
 
+Object internalFfiSupportedPEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiLookupEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiOpenEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiCallTointEx(VM* theVM, int argc, const Object* argv);
