@@ -462,4 +462,5 @@
     %ffi-call->string-or-zero
     %ffi-pointer->string
     %ffi-pointer-ref
+    %ffi-supported?
     )
